kubernetes/battle-api.yml
apiVersion: v1
kind: Service
metadata:
  name: battle
  namespace: ama
  labels:
    app: battle
spec:
  clusterIP: None
  ports:
    - name: http
      port: 9000
      protocol: TCP
    - name: service-locator
      port: 9008
      protocol: TCP
    - name: remoting
      port: 2552
      protocol: TCP
    - name: management
      port: 8558
      protocol: TCP
  selector:
    app: battle
  publishNotReadyAddresses: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battle
  namespace: ama
  labels:
    app: battle
spec:
  replicas: 2
  selector:
    matchLabels:
      app: battle
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: battle
    spec:
      restartPolicy: Always
      containers:
        - name: battle
          image: golemiso/battle:1.0-SNAPSHOT
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /ready
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 120
          livenessProbe:
            httpGet:
              path: /alive
              port: management
            periodSeconds: 10
            failureThreshold: 10
            initialDelaySeconds: 120
          ports:
            - name: http
              containerPort: 9000
            - name: service-locator
              containerPort: 9008
            - name: remoting
              containerPort: 2552
            - name: management
              containerPort: 8558
          resources:
            limits:
              cpu: 300m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 256Mi
          command:
            - "/opt/docker/bin/battle-impl"
      volumes: []
