kubernetes/competition-api.yml
apiVersion: v1
kind: Service
metadata:
  name: competition
  namespace: ama
spec:
  clusterIP: None
  ports:
    - name: http
      port: 9000
      protocol: TCP
    - name: service-locator
      port: 9008
      protocol: TCP
    - name: remoting
      port: 2552
      protocol: TCP
    - name: management
      port: 8558
      protocol: TCP
  selector:
    app: competition
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # Unique key of the Deployment instance
  name: competition
  namespace: ama
spec:
  # 2 Pods should exist at all times.
  replicas: 1
  selector:
    matchLabels:
      app: competition
  template:
    metadata:
      labels:
        # Apply this label to pods and default
        # the Deployment label selector to this value
        app: competition
    spec:
      containers:
        - name: competition
          # Run this image
          image: golemiso/competition:1.0-SNAPSHOT
          ports:
            - name: http
              containerPort: 9000
            - name: service-locator
              containerPort: 9008
            - name: remoting
              containerPort: 2552
            - name: management
              containerPort: 8558
          resources:
            limits:
              cpu: 0.1
              memory: 256Mi
            requests:
              cpu: 0.1
              memory: 256Mi
          command:
            - "/opt/docker/bin/competition-impl"
      volumes: []
