kubernetes/web-gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: web-gateway
  namespace: ama
  labels:
    app: web-gateway
spec:
  ports:
    - port: 9000
      protocol: TCP
  selector:
    app: web-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-gateway
  namespace: ama
  labels:
    app: web-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-gateway
  template:
    metadata:
      labels:
        app: web-gateway
    spec:
      containers:
        - name: web-gateway
          image: golemiso/web-gateway:1.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
          command:
            - "/opt/docker/bin/web-gateway"
      volumes: []
